--- a/make.html
+++ b/make.html
@@ -4,12 +4,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="this is my knowlege page">
 		<title>create</title>
-		<link rel="stylesheet" href="css/make.css">
+		<link rel="stylesheet" href="make.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Modak">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     </head>
     <body id="main">
-        <header id="hed1"><h1>JUSTICE LEAGUE ACTION</h1></header>
+        <header id="hed1"><h1>JUSTICE LEAGUE ACTION</h1></header> 
 
         
         <form id="search" action="https://google.com/images"> 
