--- a/make.html
+++ b/make.html
@@ -12,7 +12,7 @@
         <header id="hed1"><h1>JUSTICE LEAGUE ACTION</h1></header> 
 
         
-        <form id="search" action="https://google.com/images"> 
+        <form id="search" action="https://google.com/search"> 
             <input id="in" type="text"  placeholder="HEROS" title="type your favorite hero" name="q">
             <input id="sum" type="submit" value="G">
         </form>
